"Feedback" design done

--- a/app/src/main/res/layout/activity_evaluation.xml
+++ b/app/src/main/res/layout/activity_evaluation.xml
@@ -137,32 +137,48 @@
                         android:textStyle="bold"
                         android:typeface="monospace" />
 
-                    <Button
-                        android:id="@+id/btn_did_event"
+                    <RadioGroup
+                        android:id="@+id/event_cempletion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/radio_off"
-                        android:onClick="btnDidNotEventClick"
-                        android:text="@string/did_it"
-                        android:textAlignment="center"
-                        android:textAllCaps="false"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        android:checkedButton="@+id/btn_did_event"
+                        android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/btn_didnt_do_event"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/radio_off"
-                        android:onClick="btnDidNotEventClick"
-                        android:text="@string/did_not_it"
-                        android:textAlignment="center"
-                        android:textAllCaps="false"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        <RadioButton
+                            android:id="@+id/btn_did_event"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_radio_button"
+                            android:button="@android:color/transparent"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            android:text="@string/did_it"
+                            android:textAlignment="center"
+                            android:textAllCaps="false"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
 
+                        <RadioButton
+                            android:id="@+id/btn_didnt_do_event"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_radio_button"
+                            android:button="@android:color/transparent"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            android:text="@string/did_not_it"
+                            android:textAlignment="center"
+                            android:textAllCaps="false"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
+
+                    </RadioGroup>
 
                 </LinearLayout>
 
@@ -280,32 +296,48 @@
                         android:textStyle="bold"
                         android:typeface="monospace" />
 
-                    <Button
-                        android:id="@+id/btn_did_intervention"
+                    <RadioGroup
+                        android:id="@+id/intervention_completion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/radio_off"
-                        android:onClick="btnDidNotIntervClick"
-                        android:text="@string/did_it"
-                        android:textAlignment="center"
-                        android:textAllCaps="false"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        android:checkedButton="@+id/btn_did_intervention"
+                        android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/btn_didnt_do_intervention"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/radio_off"
-                        android:onClick="btnDidNotIntervClick"
-                        android:text="@string/did_not_it"
-                        android:textAlignment="center"
-                        android:textAllCaps="false"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        <RadioButton
+                            android:id="@+id/btn_did_intervention"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_radio_button"
+                            android:button="@android:color/transparent"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            android:text="@string/did_it"
+                            android:textAlignment="center"
+                            android:textAllCaps="false"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
 
+                        <RadioButton
+                            android:id="@+id/btn_didnt_do_intervention"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_radio_button"
+                            android:button="@android:color/transparent"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            android:text="@string/did_not_it"
+                            android:textAlignment="center"
+                            android:textAllCaps="false"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
+
+                    </RadioGroup>
 
                 </LinearLayout>
 
@@ -385,30 +417,48 @@
                         android:textStyle="bold"
                         android:typeface="monospace" />
 
-                    <Button
-                        android:id="@+id/btn_yes_intervention"
+                    <RadioGroup
+                        android:id="@+id/intervention_recommendation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/radio_off"
-                        android:text="@string/yes"
-                        android:textAlignment="center"
-                        android:textAllCaps="false"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        android:checkedButton="@+id/btn_yes_intervention"
+                        android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/btn_no_intervention"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/radio_off"
-                        android:text="@string/no"
-                        android:textAlignment="center"
-                        android:textAllCaps="false"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        <RadioButton
+                            android:id="@+id/btn_yes_intervention"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_radio_button"
+                            android:button="@android:color/transparent"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            android:text="@string/yes"
+                            android:textAlignment="center"
+                            android:textAllCaps="false"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
 
+                        <RadioButton
+                            android:id="@+id/btn_no_intervention"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_radio_button"
+                            android:button="@android:color/transparent"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            android:text="@string/no"
+                            android:textAlignment="center"
+                            android:textAllCaps="false"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
+
+                    </RadioGroup>
 
                 </LinearLayout>
 
