--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -111,13 +111,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:gravity="center">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="34dp"
                 android:layout_weight="2"
                 android:labelFor="@+id/txt_event_start_time"
                 android:text="@string/event_start_time"
@@ -134,6 +135,7 @@
                 android:layout_weight="2"
                 android:background="@drawable/bg_datetime_view"
                 android:gravity="center"
+                android:onClick="pickDateClick"
                 android:padding="5dp"
                 android:textColor="@color/black" />
 
@@ -145,6 +147,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_datetime_view"
                 android:gravity="center"
+                android:onClick="pickTimeClick"
                 android:padding="5dp"
                 android:textColor="@color/black" />
         </LinearLayout>
@@ -159,7 +162,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="34dp"
                 android:layout_weight="2"
                 android:labelFor="@+id/txt_event_end_time"
                 android:text="@string/event_end_time"
@@ -176,6 +179,7 @@
                 android:layout_weight="2"
                 android:background="@drawable/bg_datetime_view"
                 android:gravity="center"
+                android:onClick="pickDateClick"
                 android:padding="5dp"
                 android:textColor="@color/black" />
 
@@ -187,6 +191,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_datetime_view"
                 android:gravity="center"
+                android:onClick="pickTimeClick"
                 android:padding="5dp"
                 android:textColor="@color/black" />
         </LinearLayout>
