--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -410,11 +410,54 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="interventionsClick"
+                android:drawableEnd="@drawable/img_expand"
+                android:onClick="expandInterventionsClick"
                 android:padding="20dp"
                 android:text="@string/interventions"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
+
+            <LinearLayout
+                android:id="@+id/intervention_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+
+                    <TextView
+                        android:id="@+id/selected_intervention"
+                        android:layout_width="0dp"
+                        android:layout_weight="5"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:background="@drawable/bg_solid_wrap"
+                        android:textSize="15sp"
+                        android:padding="10dp"
+                        android:layout_marginBottom="5dp"
+                        android:maxLines="2"
+                        android:textStyle="bold"
+                        android:typeface="monospace" />
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:onClick="editInterventionClick"
+                        android:background="@android:color/transparent"
+                        android:gravity="end|center_vertical"
+                        android:textColor="@color/dark_blue"
+                        android:text="@string/edit"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <!--Option: Repeat / Notification-->
             <View
